--- a/back/package.json
+++ b/back/package.json
@@ -1,14 +1,14 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "description": "Back para sistema de odontologia em typescript",
+  "description": "Back para sistema de vendas e compra em typescript",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "test:users": "jest --projects ./tests --runInBand ",
     "build": "tsc",
     "start": "yarn build && node dist/index.js",
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
   "author": "Dinah Martins",
   "license": "ISC",
@@ -34,7 +34,9 @@
     "@types/supertest": "^6.0.2",
     "@types/typescript": "^2.0.0",
     "globals": "^15.1.0",
+    "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
