--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.57.0",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
     "ts-jest": "^29.1.2"
   },
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/module-alias": "^2.0.4",
+    "@types/multer": "^1.4.12",
     "@types/supertest": "^6.0.2",
     "@types/typescript": "^2.0.0",
     "globals": "^15.1.0",
