feat: PDF para venda

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^6.0.2",
-    "@mui/x-date-pickers": "^7.15.0"
+    "@mui/x-date-pickers": "^7.15.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
+    "makepdf": "^0.1.2"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "nodemon": "^3.1.4"
   }
 }
