--- a/back/package.json
+++ b/back/package.json
@@ -17,11 +17,13 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/type-utils": "^7.8.0",
     "@typescript-eslint/utils": "^7.8.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
     "ts-jest": "^29.1.2"
@@ -29,8 +31,10 @@
   "devDependencies": {
     "@eslint/js": "^9.1.1",
     "@jest/globals": "^29.7.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/module-alias": "^2.0.4",
     "@types/multer": "^1.4.12",
     "@types/supertest": "^6.0.2",
